--- a/src/CSS/HomePage.css
+++ b/src/CSS/HomePage.css
@@ -68,6 +68,7 @@ h1{
 
     .hpIMG {
         max-width: 200px;
+        max-height: 200px;
         margin-top: 20px;
         margin-bottom: 20px;
     }
